crates/biome_cli/tests/snapshots/main_cases_markdown/format_markdown_keeps_embeds_with_syntax_errors.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome format --write file.md
```

## `biome.json`

```json
{
  "markdown": {
    "parser": {
      "frontmatter": true
    }
  }
}
```

## `file.md`

```md
---
items: [
---

# Embeds

```js
function () {}
```

```json
{
```

<div>

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
