crates/biome_cli/tests/snapshots/main_cases_markdown/format_markdown_with_embeds.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome format --write file.md
```

## `biome.json`

```json
{
  "markdown": {
    "parser": {
      "frontmatter": true
    }
  }
}
```

## `file.md`

```md
---
title: Biome
---

# Embeds

```js
const value = 1;
```

<div>content</div>

- item

  ```js
  const =
  ```

Paragraph with <span>inline HTML</span>.

```

# Emitted Messages

```block
Formatted 1 file in <TIME>. Fixed 1 file.
```
