crates/biome_cli/tests/snapshots/main_cases_markdown/lint_markdown_embeds_with_override.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint file.md docs/file.md
```

## `biome.json`

```json
{
  "overrides": [
    {
      "includes": ["docs/**"],
      "markdown": {
        "analyzeEmbeds": true
      }
    }
  ]
}
```

## `docs/file.md`

```md
```js
debugger;
```

```

## `file.md`

```md
```js
debugger;
```

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
docs/file.md:2:1 lint/suspicious/noDebugger  FIXABLE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × This is an unexpected use of the debugger statement.
  
    1 │ ```js
  > 2 │ debugger;
      │ ^^^^^^^^^
    3 │ ```
    4 │ 
  
  i Unsafe fix: Remove debugger statement
  
    1   │ - 
    2   │ - debugger;
      1 │ + 
    3 2 │   
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
```
