crates/biome_cli/tests/snapshots/main_cases_markdown/lint_markdown_skips_embedded_code_blocks.snap
---
source: crates/biome_cli/tests/snap_test.rs
assertion_line: 692
expression: redactor(content)
---
## Command

```shell
biome lint file.md
```

## `file.md`

```md
# Embeds

```js
debugger;
```

```css
a {
  color: red;
  color: blue;
}
```

```html
<img src="code-block.png">
```

<img src="html-block.png">

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
file.md:18:1 lint/a11y/useAltText ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Provide a text alternative through the alt, aria-label, or aria-labelledby attribute.
  
    16 │ ```
    17 │ 
  > 18 │ <img src="html-block.png">
       │ ^^^^^^^^^^^^^^^^^^^^^^^^^^
    19 │ 
  
  i Meaningful alternative text on elements helps users relying on screen readers to understand content's purpose within a page.
  
  i If the content is decorative, redundant, or obscured, consider hiding it from assistive technologies with the aria-hidden attribute.
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
